update detail product

--- a/code/detail.html
+++ b/code/detail.html
@@ -387,6 +387,302 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <h5><b>ULASAN (66)</b></h5>
+                    <b>Tiffany Shoulderbag - Green</b>
+                    <div class="d-flex">
+                        <div class="w-100">
+                            <div class="d-flex">
+                                <div class="text-center">
+                                    <span class="display-4 font-weight-bolder">3.1</span><br>
+                                    <div>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-20" type=""></object>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-20" type=""></object>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-20" type=""></object>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-20" type=""></object>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-20" type=""></object>
+                                    </div>
+                                    <small class="text-black-50">(100) Ulasan</small>
+                                </div>
+                                <div class="flex-grow-1">
+                                    <div class="row align-items-center">
+                                    <div class="col-4 text-right">
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        5
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="progress rounded" style="height: 10px;">
+                                        <div class="progress-bar bg-success rounded" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-2">
+                                        55
+                                    </div>
+                                    </div>
+                                    <div class="row align-items-center">
+                                    <div class="col-4 text-right">
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        4
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="progress rounded" style="height: 10px;">
+                                        <div class="progress-bar bg-success rounded" role="progressbar" style="width: 55%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-2">
+                                        50
+                                    </div>
+                                    </div>
+                                    <div class="row align-items-center">
+                                    <div class="col-4 text-right">
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        3
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="progress rounded" style="height: 10px;">
+                                        <div class="progress-bar bg-success rounded" role="progressbar" style="width: 45%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-2">
+                                        40
+                                    </div>
+                                    </div>
+                                    <div class="row align-items-center">
+                                    <div class="col-4 text-right">
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        2
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="progress rounded" style="height: 10px;">
+                                        <div class="progress-bar bg-success rounded" role="progressbar" style="width: 35%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-2">
+                                        30
+                                    </div>
+                                    </div>
+                                    <div class="row align-items-center">
+                                    <div class="col-4 text-right">
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        1
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="progress rounded" style="height: 10px;">
+                                        <div class="progress-bar bg-success rounded" role="progressbar" style="width: 25%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-2">
+                                        20
+                                    </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="mt-4 d-flex justify-content-between">
+                        <span class="f-10">FOTO DARI PEMBELI (16)</span>
+                        <a href="" class="text-link">Lihat Semua</a>
+                    </div>
+                    <div class="">
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                        </a>
+                        <a href="">
+                            <img src="../assets/WEB/IMAGE/IMAGE WEB74.jpg" style="position: absolute;" class="w-60 m-2" alt="">
+                        </a>
+                    </div>
+
+                    <div class="mt-4 d-flex justify-content-between">
+                        <span class="f-10">ULASAN PALING MEMBANTU</span>
+                    </div>
+                    <div class="card mt-4 w-75">
+                        <div class="card-body">
+                            <div class="d-flex">
+                                <div>
+                                    <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-60" alt="">
+                                </div>
+                                <div>
+                                    <span class="text-link">Rani</span><br>
+                                    <div class="d-flex">
+                                        <div class="ml-2">
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        </div>
+                                        <span class="fc-text ml-2">1 bulan lalu</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="mt-2">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo…
+                            </p>
+                            <hr>
+                            <div class="d-flex justify-content-between">
+                                <a href="" class="f-10 my-auto">Apakah ulasan ini membantu ?</a>
+                                <div>
+                                    <button class="btn-white p-6-20 rounded-18">
+                                        <img src="../assets/WEB/ICON/ICON WEB89.svg" class="w-20" alt="">
+                                    </button>
+                                    <a href="" class="text-link">Laporkan</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mt-4 d-flex justify-content-between">
+                        <span class="my-auto">Filter</span>
+                        <div>
+                            <button class="btn-white-active p-6-20 rounded-18">
+                                Semua (66)
+                            </button>
+                            <button class="btn-white p-6-20 rounded-18">
+                                Dengan Foto (13)
+                            </button>
+                            <button class="btn-white p-6-20 rounded-18">
+                                <img src="../assets/WEB/ICON/bintang.svg" class="w-20 my-auto"  alt="">
+                                <span class="my-auto">
+                                    5
+                                </span>
+                            </button>
+                            <button class="btn-white p-6-20 rounded-18">
+                                <img src="../assets/WEB/ICON/bintang.svg" class="w-20 my-auto"  alt="">
+                                <span class="my-auto">
+                                    4
+                                </span>
+                            </button>
+                            <button class="btn-white p-6-20 rounded-18">
+                                <img src="../assets/WEB/ICON/bintang.svg" class="w-20 my-auto"  alt="">
+                                <span class="my-auto">
+                                    3
+                                </span>
+                            </button>
+                            <button class="btn-white p-6-20 rounded-18">
+                                <img src="../assets/WEB/ICON/bintang.svg" class="w-20 my-auto"  alt="">
+                                <span class="my-auto">
+                                    2
+                                </span>
+                            </button>
+                            <button class="btn-white p-6-20 rounded-18">
+                                <img src="../assets/WEB/ICON/bintang.svg" class="w-20 my-auto"  alt="">
+                                <span class="my-auto">
+                                    1
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="mt-4">
+                        <b class="f-10">SEMUA ULASAN (66)</b>
+                        <br>
+                        <div class="mt-3 d-flex justify-content-between">
+                            <div class="d-flex">
+                                <div>
+                                    <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-60" alt="">
+                                </div>
+                                <div class="">
+                                    <span class="text-link f-9">Rani</span><br>
+                                    <span class="fc-text ml-2 f-9">1 bulan lalu</span>
+                                </div>
+                                <div class="ml-4 w-75">
+                                    <div>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                    </div>
+                                    <p class="f-10">Barangnya bagus banget, tidak ada cacat.</p>
+                                    <a href="">
+                                        <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                                    </a>
+                                    <div class="card rounded-18 bg-light border-0">
+                                        <div class="card-body">
+                                            <div class="d-flex">
+                                                <div>
+                                                    <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-35" alt="">
+                                                </div>
+                                                <div class="d-flex">
+                                                    <div class="ml-2">
+                                                        <span class="f-10">Store.id</span><br>
+                                                        <span class="fc-textf-10">1 minggu lalu</span>
+                                                    </div>
+                                                    <div class="item-badge">
+                                                        <span class="success">
+                                                            Penjual
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <p class="pl-5 mt-2">
+                                                Sip mantap gan, Semoga cocok dan produknya selalu memuaskan ya. Kami tunggu orderan berikutnya, <br><br> Terimakasih.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <button class="btn-white p-6-20 rounded-18">
+                                    <img src="../assets/WEB/ICON/ICON WEB89.svg" class="w-20" alt="">
+                                </button>
+                                <a href="" class="text-link">Laporkan</a>
+                            </div>
+                        </div>
+                        <hr>
+                        <div>
+                            <nav aria-label="Page navigation example" class="float-end">
+                            <ul class="pagination">
+                                <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                </li>
+                                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">
+                                <a class="page-link" href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                                </li>
+                            </ul>
+                            </nav>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </section>
 
