update container width

--- a/code/detail.html
+++ b/code/detail.html
@@ -649,12 +649,12 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div>
-                                <button class="btn-white p-6-20 rounded-18">
-                                    <img src="../assets/WEB/ICON/ICON WEB89.svg" class="w-20" alt="">
-                                </button>
-                                <a href="" class="text-link">Laporkan</a>
+                                <div class="">
+                                    <button class="btn-white p-6-20 rounded-18">
+                                        <img src="../assets/WEB/ICON/ICON WEB89.svg" class="w-20" alt="">
+                                    </button>
+                                    <a href="" class="text-link">Laporkan</a>
+                                </div>
                             </div>
                         </div>
                         <hr>
